with Delphi, Python, Java